/*
 * Copyright 2013 bits of proof zrt.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.bitsofproof.supernode.wallet;

message SimpleWallet {
	required uint32 bcsapiversion = 1;
	required bytes encryptedSeed = 2;
	required bytes signature = 3;
	message Account
	{
		required string publicKey = 1;
		required uint64 created = 2;
		required string name = 3;
		optional uint32 firstIndex = 4;
	}
	repeated Account accounts = 4;
}